--- a/src/components/Expenses/ExpenseDate/ExpenseDate.css
+++ b/src/components/Expenses/ExpenseDate/ExpenseDate.css
@@ -1,26 +1,28 @@
 .expense-date {
-  display: flex;
-  flex-direction: column;
-  width: 5.5rem;
-  height: 5.5rem;
-  border: 1px solid #ececec;
-  background-color: #2a2a2a;
-  color: white;
-  border-radius: 12px;
-  align-items: center;
-  justify-content: center;
+	display: flex;
+	flex-direction: column;
+	width: 5.5rem;
+	height: 5.5rem;
+	border-radius: 12px;
+	align-items: center;
+	justify-content: center;
+
+	background: rgba(255, 255, 255, 0.05);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(0px);
+	-webkit-backdrop-filter: blur(0px);
+	border-radius: 10px;
+	border: 1px solid white;
 }
 
 .expense-date__month {
-  font-size: 0.75rem;
-  font-weight: bold;
+	font-size: 0.75rem;
 }
 
 .expense-date__year {
-  font-size: 0.75rem;
+	font-size: 0.75rem;
 }
 
 .expense-date__day {
-  font-size: 1.5rem;
-  font-weight: bold;
+	font-size: 1.5rem;
 }
