--- a/src/components/Expenses/NewExpense/NewExpense.css
+++ b/src/components/Expenses/NewExpense/NewExpense.css
@@ -1,29 +1,35 @@
 .new-expense {
-	background-color: #a892ee;
 	padding: 1rem;
 	margin: 2rem auto;
 	width: 50rem;
 	max-width: 95%;
 	border-radius: 12px;
 	text-align: center;
-	box-shadow: 0 1px 8px rgba(0, 0, 0, 0.25);
+
+	background: rgba(255, 255, 255, 0.25);
+	box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+	backdrop-filter: blur(3.5px);
+	-webkit-backdrop-filter: blur(3.5px);
+	border-radius: 10px;
+	border: 1px solid rgba(255, 255, 255, 0.18);
 }
 
 .new-expense button {
 	font: inherit;
-	cursor: pointer;
-	padding: 1rem 2rem;
-	border: 1px solid #40005d;
-	background-color: #40005d;
-	color: white;
-	border-radius: 12px;
 	margin-right: 1rem;
+	background-color: #3a6df0;
+	border: none;
+	padding: 8px 26px;
+	color: #fff;
+	border-radius: 20px;
+	cursor: pointer;
+	transition: 0.3s;
+	white-space: nowrap;
 }
 
 .new-expense button:hover,
 .new-expense button:active {
-	background-color: #510674;
-	border-color: #510674;
+	background: #1e59f1;
 }
 
 .new-expense button.alternative {
